@@ -1,3 +1,9 @@
+4.1.0
+=====
+
+ * New public interfaces have been added.
+
+
 General
 =======
 
